--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Parking Lot</title>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAOMAP_KEY%&libraries=services,clusterer"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=55cfe83c830dcb067e376947f395cec2&libraries=services,clusterer"
     ></script>
   </head>
   <body>
