--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=55cfe83c830dcb067e376947f395cec2&libraries=services,clusterer"
+      async
     ></script>
   </head>
   <body>
